# sovereign-sdk

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  Releases.md  constants.json  constants.test.json  constants.testing.toml  constants.toml  deny.toml  diff.txt  file_aggregator.sh  packages_to_publish.yml  rust-toolchain.toml  rustc-ice-2024-12-04T09_56_31-1000220.txt  show_diff.sh  test_ligetron.sh
adapters/celestia/: Cargo.toml
adapters/celestia/src/: celestia.rs  da_service.rs  shares.rs  test_helper.rs  types.rs
adapters/mock-da/: Cargo.toml
adapters/mock-da/src/: lib.rs  service.rs  validity_condition.rs  verifier.rs
adapters/mock-zkvm/: Cargo.toml
adapters/mock-zkvm/src/: crypto.rs  guest.rs  host.rs  lib.rs  notifier.rs
adapters/risc0/: Cargo.toml  build.rs
adapters/risc0/src/: crypto.rs  guest.rs  host.rs  lib.rs
crates/fuzz/: Cargo.toml  Makefile  README.md
crates/fuzz/fuzz_targets/: accounts_call.rs  accounts_call_random.rs  accounts_parse_call_message.rs  accounts_parse_call_message_random.rs  address_parse_serde.rs  address_try_from_bytes.rs  bank_call.rs  bank_parse_call_message.rs
crates/rollup-interface/: Cargo.toml  README.md
crates/rollup-interface/src/: lib.rs
crates/rollup-interface/tests/: safe_vec.rs
examples/demo-rollup/: .gitignore  Cargo.toml  Makefile  README.md  README_CELESTIA.md  autogenerated.rs  build.rs  celestia_rollup_config.toml  chain_hash.autogenerated.rs  demo-rollup-schema.json  ligetron_backup.wasm  mock_da.sqlite-shm  mock_da.sqlite-wal  mock_rollup_config.toml  run_ligetron.sh  web3-js-sdk-test-runner.sh
examples/demo-rollup/rest-api-load-testing/: Cargo.toml
examples/demo-rollup/sov-benchmarks/: .gitignore  Cargo.toml  Makefile  README.md
examples/demo-rollup/sov-soak-testing/: .gitignore  Cargo.toml  README.md  build.rs
examples/demo-rollup/src/: celestia_nomt_rollup.rs  celestia_nomt_rollup_ligetron.rs  celestia_rollup.rs  celestia_rollup_ligetron.rs  eth.rs  lib.rs  main.rs  mock_ligero_rollup.rs  mock_nomt_rollup.rs  mock_nomt_rollup_ligetron.rs  mock_rollup.rs  mock_rollup_ligetron.rs  test_rpc.rs  zk.rs
examples/demo-rollup/stf/: Cargo.toml  README.md  build.rs
examples/demo-rollup/testing-harness/: Cargo.toml  README.md
examples/demo-rollup/tests/: all_tests.rs  test_helpers.rs
examples/demo-simple-stf/: Cargo.toml  README.md
examples/demo-simple-stf/src/: lib.rs
examples/demo-simple-stf/tests/: stf_test.rs
examples/simple-nft-module/: Cargo.toml  README.md
examples/simple-nft-module/src/: call.rs  event.rs  genesis.rs  lib.rs  query.rs  rpc.rs  tests.rs
examples/simple-nft-module/tests/: nft_test.rs
examples/universal-wallet/: Cargo.toml  build.rs
examples/universal-wallet/src/: main.rs
full-node/jsonapi-utils/: Cargo.toml  README.md
full-node/jsonapi-utils/src/: axum_extractors.rs  lib.rs  pagination.rs  test_utils.rs  types.rs  utils.rs
full-node/sov-db/: Cargo.toml  README.md
full-node/sov-db/benches/: state_db_bench.rs
full-node/sov-db/src/: accessory_db.rs  lib.rs  native_db.rs  sequencer_db.rs  state_db.rs
full-node/sov-db/tests/: ledger_db.rs
full-node/sov-ethereum/: Cargo.toml
full-node/sov-ethereum/src/: batch_builder.rs  lib.rs  signer.rs
full-node/sov-ledger-apis/: Cargo.toml  openapi-v3.yaml
full-node/sov-ledger-apis/src/: lib.rs  server.rs
full-node/sov-ledger-apis/tests/: empty_ledger.rs  jsonapi.rs  rpc.rs
full-node/sov-metrics/: Cargo.toml
full-node/sov-metrics/src/: counters.rs  lib.rs
full-node/sov-prover-storage-manager/: Cargo.toml
full-node/sov-prover-storage-manager/benches/: single_thread_progression.rs
full-node/sov-prover-storage-manager/src/: cache_container_group.rs  lib.rs  test_utils.rs
full-node/sov-sequencer/: Cargo.toml  README.md  openapi-v3.yaml
full-node/sov-sequencer-json-client/: Cargo.toml
full-node/sov-sequencer-json-client/examples/: simple.rs
full-node/sov-sequencer-json-client/src/: lib.rs
full-node/sov-sequencer/src/: batch_builder.rs  db.rs  lib.rs  mempool.rs  sequencer.rs  tx_status.rs  utils.rs
full-node/sov-sequencer/tests/: rest_api.rs  rpc_and_axum.rs  tx_status_subscription_rpc.rs
full-node/sov-stf-runner/: Cargo.toml
full-node/sov-stf-runner/src/: config.rs  lib.rs  runner.rs  verifier.rs
full-node/sov-stf-runner/tests/: aggregated_proof_tests.rs  hash_stf.rs  prover_service_tests.rs  prover_tests.rs  runner_initialization_tests.rs  runner_reorg_tests.rs
module-system/module-schemas/: Cargo.toml  build.rs
module-system/module-schemas/genesis-schemas/: sov-accounts.json  sov-value-setter.json
module-system/module-schemas/schemas/: sov-accounts.json  sov-bank.json  sov-sequencer-registry.json
module-system/sov-capabilities/: Cargo.toml
module-system/sov-capabilities/src/: lib.rs
module-system/sov-cli/: Cargo.toml
module-system/sov-cli/src/: lib.rs  wallet_state.rs
module-system/sov-cli/tests/: keys.rs  transactions.rs
module-system/sov-kernels/: Cargo.toml
module-system/sov-kernels/src/: basic.rs  soft_confirmations.rs
module-system/sov-modules-api/: Cargo.toml
module-system/sov-modules-api/src/: authentication.rs  batch.rs  cli.rs  default_context.rs  default_signature.rs  default_spec.rs  higher_kinded_types.rs  hooks.rs  lib.rs  pub_key_hex.rs  reexport_macros.rs  rpc.rs  scratchpad.rs  state.rs  tests.rs  transaction.rs  tx_verifier.rs  utils.rs
module-system/sov-modules-api/tests/: proof_tests.rs  state_tests.rs  working_set_tests.rs
module-system/sov-modules-core/: Cargo.toml  Makefile  README.md
module-system/sov-modules-core/src/: lib.rs  rpc.rs
module-system/sov-modules-core/tests/: working_set_tests.rs
module-system/sov-modules-macros/: Cargo.toml  build.rs
module-system/sov-modules-macros/src/: cli_parser.rs  common.rs  event.rs  lib.rs  (+8 more)
module-system/sov-modules-rollup-blueprint/: Cargo.toml  README.md
module-system/sov-modules-stf-blueprint/: Cargo.toml  README.md
rollup-interface/: Cargo.toml  Makefile
rollup-interface/src/: lib.rs
(+2358 files in other folders)
