[workspace]
resolver = "2"
members = [
    "crates/rollup-interface",
    # TODO: https://github.com/Sovereign-Labs/sovereign-sdk-wip/issues/498
    # "adapters/avail",
    "crates/adapters/risc0",
    "crates/adapters/celestia",
    "crates/adapters/mock-da",
    "crates/adapters/mock-zkvm",
    # Examples
    "examples/const-rollup-config",
    "examples/demo-simple-stf",
    "examples/demo-rollup",
    "examples/simple-nft-module",
    # Full Node
    "crates/full-node/sov-db",
    "crates/full-node/sov-sequencer",
    "crates/full-node/sov-sequencer-json-client",
    "crates/full-node/sov-ethereum",
    "crates/full-node/sov-ledger-apis",
    "crates/full-node/sov-ledger-json-client",
    "crates/full-node/sov-stf-runner",
    "crates/full-node/sov-metrics",
    "crates/full-node/sov-eth-dev-signer",
    # Utils
    "crates/utils/rng-da-service",
    "crates/utils/sov-rest-utils",
    "crates/utils/test-harness/test-harness",
    "crates/utils/test-harness/test-harness-lib",
    # Module System
    "crates/module-system/sov-cli",
    "crates/module-system/sov-modules-stf-blueprint",
    "crates/module-system/sov-modules-rollup-blueprint",
    "crates/module-system/sov-modules-macros",
    "crates/module-system/sov-kernels",
    "crates/module-system/sov-state",
    "crates/module-system/sov-modules-api",
    "crates/module-system/module-schemas",
    "crates/module-system/sov-test-utils",
    "crates/module-system/module-implementations/sov-accounts",
    "crates/module-system/module-implementations/sov-bank",
    "crates/module-system/module-implementations/sov-nft-module",
    "crates/module-system/module-implementations/sov-chain-state",
    "crates/module-system/module-implementations/sov-blob-storage",
    "crates/module-system/module-implementations/sov-evm",
    "crates/module-system/module-implementations/sov-prover-incentives",
    "crates/module-system/module-implementations/sov-attester-incentives",
    "crates/module-system/module-implementations/sov-sequencer-registry",
    "crates/module-system/module-implementations/sov-value-setter",
    "crates/module-system/module-implementations/module-template",
    "crates/module-system/module-implementations/integration-tests",
    "crates/module-system/sov-capabilities",
    "crates/module-system/module-implementations/sov-nonces",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Sovereign Labs Community Software License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = false
repository = "https://github.com/sovereign-labs/sovereign-sdk"

[workspace.lints.rust]
dead_code = "deny"
non_ascii_idents = "deny" # Bad for readability and it can also be a security vulnerability

# In case you need inspiration for new lints to add to the list, this is a good
# reference: <https://github.com/EmbarkStudios/rust-ecosystem/blob/6783ae1573d62f3f5439b8ff9e04bec191ec2eaf/lints.toml>.
[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
float_arithmetic = "deny"              # Can cause subtle bugs due to different behavior between native and zkVM execution.

#map_err_ignore = "warn"
#doc_markdown = "warn"
[workspace.dependencies]
# Workspace packages
const-rollup-config = { path = "examples/const-rollup-config", default-features = false, version = "0.3" }
demo-stf = { path = "examples/demo-rollup/stf", default-features = false, version = "0.3" }
sov-ethereum = { path = "crates/full-node/sov-ethereum", default-features = false, version = "0.3" }
sov-celestia-adapter = { path = "crates/adapters/celestia", default-features = false, version = "0.3" }
sov-mock-da = { path = "crates/adapters/mock-da", default-features = false, version = "0.3" }
sov-mock-zkvm = { path = "crates/adapters/mock-zkvm", default-features = false, version = "0.3" }
sov-bank = { path = "crates/module-system/module-implementations/sov-bank", default-features = false, version = "0.3" }
sov-sequencer-registry = { path = "crates/module-system/module-implementations/sov-sequencer-registry", default-features = false, version = "0.3" }
sov-prover-incentives = { path = "crates/module-system/module-implementations/sov-prover-incentives", default-features = false, version = "0.3" }
sov-value-setter = { path = "crates/module-system/module-implementations/sov-value-setter", default-features = false, version = "0.3" }
sov-chain-state = { path = "crates/module-system/module-implementations/sov-chain-state", default-features = false, version = "0.3" }
sov-blob-storage = { path = "crates/module-system/module-implementations/sov-blob-storage", default-features = false, version = "0.3" }
sov-evm = { path = "crates/module-system/module-implementations/sov-evm", default-features = false, version = "0.3" }
sov-sequencer = { path = "crates/full-node/sov-sequencer", default-features = false, version = "0.3" }
sov-nft-module = { path = "crates/module-system/module-implementations/sov-nft-module", default-features = false, version = "0.3" }
sov-accounts = { path = "crates/module-system/module-implementations/sov-accounts", default-features = false, version = "0.3" }
sov-rng-da-service = { path = "crates/utils/rng-da-service", default-features = false, version = "0.3" }
sov-ledger-apis = { path = "crates/full-node/sov-ledger-apis", default-features = false, version = "0.3" }
sov-eth-dev-signer = { path = "crates/full-node/sov-eth-dev-signer", default-features = false, version = "0.3" }
sov-modules-api = { path = "crates/module-system/sov-modules-api", default-features = false, version = "0.3" }
sov-nonces = { path = "crates/module-system/module-implementations/sov-nonces", default-features = false, version = "0.3" }
sov-risc0-adapter = { path = "crates/adapters/risc0", default-features = false, version = "0.3" }
sov-rollup-interface = { path = "crates/rollup-interface", default-features = false, version = "0.3" }
sov-ledger-json-client = { path = "crates/full-node/sov-ledger-json-client", default-features = false, version = "0.3" }
sov-stf-runner = { path = "crates/full-node/sov-stf-runner", default-features = false, version = "0.3" }
sov-attester-incentives = { path = "crates/module-system/module-implementations/sov-attester-incentives", default-features = false, version = "0.3" }
sov-capabilities = { path = "crates/module-system/sov-capabilities", default-features = false, version = "0.3" }
sov-kernels = { path = "crates/module-system/sov-kernels", default-features = false, version = "0.3" }
sov-state = { path = "crates/module-system/sov-state", default-features = false, version = "0.3" }
sov-rest-utils = { path = "crates/utils/sov-rest-utils", default-features = false, version = "0.3" }
sov-metrics = { path = "crates/full-node/sov-metrics", default-features = false, version = "0.3" }
sov-sequencer-json-client = { path = "crates/full-node/sov-sequencer-json-client", default-features = false, version = "0.3" }
sov-cli = { path = "crates/module-system/sov-cli", default-features = false, version = "0.3" }
sov-modules-rollup-blueprint = { path = "crates/module-system/sov-modules-rollup-blueprint", default-features = false, version = "0.3" }
sov-modules-macros = { path = "crates/module-system/sov-modules-macros", default-features = false, version = "0.3" }
sov-modules-stf-blueprint = { path = "crates/module-system/sov-modules-stf-blueprint", default-features = false, version = "0.3" }
sov-test-utils = { path = "crates/module-system/sov-test-utils", default-features = false, version = "0.3" }
sov-db = { path = "crates/full-node/sov-db", default-features = false, version = "0.3" }
test-harness-lib = { path = "crates/utils/test-harness/test-harness-lib" }
# Dependencies maintained by Sovereign
jmt = { git = "https://github.com/penumbra-zone/jmt.git", rev = "dc554608895439022f1f11809d2d7a5f76f9a13f" }
reltester = { git = "https://github.com/sovereign-labs/reltester.git", rev = "d6209abff72929f5ba41614f5cea3e4a748428c3" }
rockbound = { git = "https://github.com/sovereign-Labs/rockbound", rev = "d640252e19c08ff47ce1dc2c209b9b1ba2bf9343" }
sov-wallet-format = { git = "ssh://git@github.com/Sovereign-Labs/sov-wallet-format.git", rev = "0860de2877084066477d0157a0f5a311bd1be919" }
# External dependencies
async-trait = "0.1.71"
anyhow = { version = "1.0.68" }
axum = { version = "0.7", default-features = false }
axum-server = { version = "0.6", features = ["tls-rustls"] }
arbitrary = { version = "1.3.1", features = ["derive"] }
backon = "0.4.4"
base64 = "0.22"
borsh = { version = "1", features = ["derive"] }
# TODO: Consider replacing this serialization format
#     https://github.com/Sovereign-Labs/sovereign-sdk/issues/283
bincode = "1.3.3"
bcs = "0.1.6"
byteorder = { version = "1.5.0", default-features = false }
bytes = { version = "1.2.1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["now"] }
derivative = { version = "2.2", features = ["use_core"] }
digest = { version = "0.10.6", default-features = false, features = ["alloc"] }
derive-getters = { version = "0.4.0" }
futures = { version = "0.3", default-features = false }
hex = { version = "0.4.3" }
insta = { version = "1.39", features = ["json"] }
once_cell = { version = "1.19.0", default-features = false, features = [
    "alloc",
] }
prometheus = { version = "0.13.3", default-features = false }
proptest = { version = "1.3", default-features = false, features = ["alloc"] }
proptest-derive = "0.5.0"
rand = "0.8"
rayon = "1.9.0"
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.196", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_yaml = { version = "0.9", default-features = false }
serde_with = { version = "3.7", features = ["schemars_0_8"] }
sha2 = { version = "0.10.6", default-features = false }
thiserror = "1.0.50"
tower = { version = "0.4", default-features = false }
tower-http = "0.5"
tower-request-id = "0.3"
tracing-test = { version = "0.2.5", features = [
    "no-env-filter",
] } # https://docs.rs/tracing-test/latest/tracing_test/#per-crate-filtering
utoipa = "4.2"
utoipa-swagger-ui = { version = "6", features = ["axum"] }
unwrap-infallible = "0.1.5"
tiny-keccak = "2.0.2"
tracing = { version = "0.1.40", default-features = false }
bech32 = { version = "0.11" }
derive_more = { version = "0.99.11", default-features = false }
clap = { version = "4.4.10", features = ["derive"] }
toml = { version = "0.8.0", features = ["parse"] }
jsonrpsee = { version = "0.24" }
schemars = { version = "0.8.16", features = ["derive"] }
tempfile = "3.8"
tokio = { version = "1.39", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1.9", default-features = false } # v1.9 is important because it guarantees monotic UUIDv7 generation: https://github.com/uuid-rs/uuid/releases/tag/1.9.0.
lazy_static = "1.4.0"
num_cpus = "1.0"
risc0-zkvm = { version = "1.0.5", default-features = false }
risc0-zkvm-platform = "1.0.5"
risc0-zkp = "1.0.5"
risc0-circuit-rv32im = "1.0.5"
risc0-build = "1.0.5"
sov-cycle-utils = { git = "https://github.com/Sovereign-Labs/risc0-cycle-macros.git", rev = "e3e4e1a8b9bbb955a6099a15b6716c20dcd78d86" }

# EVM dependencies
ethereum-types = "0.14.1"
ethers-core = { version = "=2.0.14", default-features = false }
ethers-contract = { version = "=2.0.14", default-features = false }
ethers-providers = { version = "=2.0.14", default-features = false }
ethers-signers = { version = "=2.0.14", default-features = false }
ethers-middleware = { version = "=2.0.14", default-features = false }
# ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9, just couple days after 1.0.4
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
alloy-rpc-types = { version = "0.2", default-features = false }
revm = { version = "12.1.0", features = ["serde"], default-features = false }
revm-inspectors = { version = "0.5", default-features = false }
secp256k1 = { version = "0.29.0", default-features = false, features = [
    "global-context",
    "recovery",
] }

# End of EVM dependencies
[patch.'https://github.com/eigerco/celestia-node-rs.git']

# Uncomment to apply local changes
# celestia-proto = { path = "../celestia-node-rs/proto" }
# celestia-rpc = { path = "../celestia-node-rs/rpc" }
# celestia-types = { path = "../celestia-node-rs/types" }
[patch.'https://github.com/eigerco/celestia-tendermint-rs.git']
# Uncomment to apply local changes
# tendermint = { path = "../celestia-tendermint-rs/tendermint" }
# tendermint-proto = { path = "../celestia-tendermint-rs/proto" }

[profile.dev.package.sov-modules-macros]
# Set the optimization level to 3 for the sov-modules-macros crate. This
# should reduce build times for other packages.
opt-level = 3
