[workspace]
resolver = "2"
members = [
    "crates/rollup-interface",
    # TODO: https://github.com/Sovereign-Labs/sovereign-sdk-wip/issues/498
    # "adapters/avail",
    "crates/adapters/risc0",
    "crates/adapters/sp1",
    "crates/adapters/celestia",
    "crates/adapters/mock-da",
    "crates/adapters/mock-zkvm",
    # Examples
    "examples/const-rollup-config",
    "examples/demo-simple-stf",
    "examples/demo-rollup",
    "examples/demo-rollup/rest-api-load-testing",
    "examples/demo-rollup/stf/demo-stf-json-client",
    "examples/simple-nft-module",
    # Full Node
    "crates/full-node/sov-db",
    "crates/full-node/sov-sequencer",
    "crates/full-node/sov-ethereum",
    "crates/full-node/sov-ledger-apis",
    "crates/full-node/sov-rollup-apis",
    "crates/full-node/sov-stf-runner",
    "crates/full-node/sov-metrics",
    "crates/full-node/sov-eth-dev-signer",
    "crates/full-node/sov-api-spec",
    # Utils
    "crates/utils/sov-rest-utils",
    "crates/utils/rest-api-load-testing",
    # Module System
    "crates/module-system/sov-cli",
    "crates/module-system/sov-modules-stf-blueprint",
    "crates/module-system/sov-modules-rollup-blueprint",
    "crates/module-system/sov-modules-macros",
    "crates/module-system/sov-kernels",
    "crates/module-system/sov-state",
    "crates/module-system/sov-modules-api",
    "crates/module-system/module-schemas",
    "crates/module-system/sov-test-utils",
    "crates/module-system/module-implementations/sov-accounts",
    "crates/module-system/module-implementations/sov-bank",
    "crates/module-system/module-implementations/sov-nft",
    "crates/module-system/module-implementations/sov-chain-state",
    "crates/module-system/module-implementations/sov-blob-storage",
    "crates/module-system/module-implementations/sov-evm",
    "crates/module-system/module-implementations/sov-paymaster",
    "crates/module-system/module-implementations/sov-prover-incentives",
    "crates/module-system/module-implementations/sov-attester-incentives",
    "crates/module-system/module-implementations/sov-sequencer-registry",
    "crates/module-system/module-implementations/sov-value-setter",
    "crates/module-system/module-implementations/module-template",
    "crates/module-system/module-implementations/integration-tests",
    "crates/module-system/sov-capabilities",
    "crates/module-system/module-implementations/sov-nonces",
    "crates/rollup-interface/universal-wallet/schema",
    "crates/rollup-interface/universal-wallet/macros",
    "crates/rollup-interface/universal-wallet/macro-helpers",
    "crates/utils/transaction-generator",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Sovereign Labs Community Software License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = false
repository = "https://github.com/sovereign-labs/sovereign-sdk"

[workspace.lints.rust]
dead_code = "deny"
non_ascii_idents = "deny" # Bad for readability and it can also be a security vulnerability

# In case you need inspiration for new lints to add to the list, this is a good
# reference: <https://github.com/EmbarkStudios/rust-ecosystem/blob/6783ae1573d62f3f5439b8ff9e04bec191ec2eaf/lints.toml>.
[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
float_arithmetic = "deny"              # Can cause subtle bugs due to different behavior between native and zkVM execution.

#map_err_ignore = "warn"
#doc_markdown = "warn"
[workspace.dependencies]
# Workspace packages
arrayvec = { version = "0.7.6", features = ["serde", "borsh"] }
console-subscriber = "0.4"
const-rollup-config = { path = "examples/const-rollup-config", default-features = false, version = "0.3" }
demo-stf = { path = "examples/demo-rollup/stf", default-features = false, version = "0.3" }
demo-stf-json-client = { path = "examples/demo-rollup/stf/demo-stf-json-client", default-features = false, version = "0.3" }
sov-ethereum = { path = "crates/full-node/sov-ethereum", default-features = false, version = "0.3" }
sov-celestia-adapter = { path = "crates/adapters/celestia", default-features = false, version = "0.3" }
sov-mock-da = { path = "crates/adapters/mock-da", default-features = false, version = "0.3" }
sov-mock-zkvm = { path = "crates/adapters/mock-zkvm", default-features = false, version = "0.3" }
sov-bank = { path = "crates/module-system/module-implementations/sov-bank", default-features = false, version = "0.3" }
sov-sequencer-registry = { path = "crates/module-system/module-implementations/sov-sequencer-registry", default-features = false, version = "0.3" }
sov-prover-incentives = { path = "crates/module-system/module-implementations/sov-prover-incentives", default-features = false, version = "0.3" }
sov-value-setter = { path = "crates/module-system/module-implementations/sov-value-setter", default-features = false, version = "0.3" }
sov-chain-state = { path = "crates/module-system/module-implementations/sov-chain-state", default-features = false, version = "0.3" }
sov-blob-storage = { path = "crates/module-system/module-implementations/sov-blob-storage", default-features = false, version = "0.3" }
sov-evm = { path = "crates/module-system/module-implementations/sov-evm", default-features = false, version = "0.3" }
sov-sequencer = { path = "crates/full-node/sov-sequencer", default-features = false, version = "0.3" }
sov-nft = { path = "crates/module-system/module-implementations/sov-nft", default-features = false, version = "0.3" }
sov-accounts = { path = "crates/module-system/module-implementations/sov-accounts", default-features = false, version = "0.3" }
sov-ledger-apis = { path = "crates/full-node/sov-ledger-apis", default-features = false, version = "0.3" }
sov-rollup-apis = { path = "crates/full-node/sov-rollup-apis", default-features = false, version = "0.3" }
sov-api-spec = { path = "crates/full-node/sov-api-spec", default-features = false, version = "0.3" }
sov-eth-dev-signer = { path = "crates/full-node/sov-eth-dev-signer", default-features = false, version = "0.3" }
sov-modules-api = { path = "crates/module-system/sov-modules-api", default-features = false, version = "0.3" }
sov-nonces = { path = "crates/module-system/module-implementations/sov-nonces", default-features = false, version = "0.3" }
sov-paymaster = { path = "crates/module-system/module-implementations/sov-paymaster", default-features = false, version = "0.3" }
sov-risc0-adapter = { path = "crates/adapters/risc0", default-features = false, version = "0.3" }
sov-sp1-adapter = { path = "crates/adapters/sp1", default-features = false, version = "0.3" }
sov-rollup-interface = { path = "crates/rollup-interface", default-features = false, version = "0.3" }
sov-stf-runner = { path = "crates/full-node/sov-stf-runner", default-features = false, version = "0.3" }
sov-attester-incentives = { path = "crates/module-system/module-implementations/sov-attester-incentives", default-features = false, version = "0.3" }
sov-capabilities = { path = "crates/module-system/sov-capabilities", default-features = false, version = "0.3" }
sov-kernels = { path = "crates/module-system/sov-kernels", default-features = false, version = "0.3" }
sov-state = { path = "crates/module-system/sov-state", default-features = false, version = "0.3" }
sov-rest-utils = { path = "crates/utils/sov-rest-utils", default-features = false, version = "0.3" }
sov-metrics = { path = "crates/full-node/sov-metrics", default-features = false, version = "0.3" }
sov-cli = { path = "crates/module-system/sov-cli", default-features = false, version = "0.3" }
sov-modules-rollup-blueprint = { path = "crates/module-system/sov-modules-rollup-blueprint", default-features = false, version = "0.3" }
sov-modules-macros = { path = "crates/module-system/sov-modules-macros", default-features = false, version = "0.3" }
sov-modules-stf-blueprint = { path = "crates/module-system/sov-modules-stf-blueprint", default-features = false, version = "0.3" }
sov-test-utils = { path = "crates/module-system/sov-test-utils", default-features = false, version = "0.3" }
sov-db = { path = "crates/full-node/sov-db", default-features = false, version = "0.3" }
sov-test-harness = { path = "crates/utils/test-harness" }
rest-api-load-testing = { path = "crates/utils/rest-api-load-testing" }
sov-universal-wallet = { path = "crates/rollup-interface/universal-wallet/schema" }
sov-universal-wallet-macros = { path = "crates/rollup-interface/universal-wallet/macros" }
sov-universal-wallet-macro-helpers = { path = "crates/rollup-interface/universal-wallet/macro-helpers" }
# Dependencies maintained by Sovereign
jmt = { git = "https://github.com/penumbra-zone/jmt.git", rev = "dc554608895439022f1f11809d2d7a5f76f9a13f" }
reltester = { git = "https://github.com/sovereign-labs/reltester.git", rev = "d6209abff72929f5ba41614f5cea3e4a748428c3" }
rockbound = { git = "https://github.com/sovereign-Labs/rockbound", rev = "4ff4c7c6b302107c3189a0438c14d481c0134b96" }
nmt-rs = { version = "0.2.3", features = ["serde", "borsh"] }
# External dependencies
async-trait = "0.1.81"
anyhow = { version = "1.0.86" }
axum = { version = "0.7", default-features = false }
axum-server = { version = "0.6", features = ["tls-rustls"] }
arbitrary = { version = "1.3.2", features = ["derive"] }
backon = "0.4.4"
base64 = "0.22"
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
borsh = { version = "1", features = ["derive"] }
# TODO: Consider replacing this serialization format
#     https://github.com/Sovereign-Labs/sovereign-sdk/issues/283
bincode = "1.3.3"
bcs = "0.1.6"
byteorder = { version = "1.5.0", default-features = false }
bytes = { version = "1.7.1", default-features = false }
convert_case = { version = "0.6", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["now"] }
darling = "0.20"
derivative = { version = "2.2", features = ["use_core"] }
digest = { version = "0.10.7", default-features = false, features = ["alloc"] }
derive-getters = { version = "0.5.0" }
futures = { version = "0.3", default-features = false }
hex = { version = "0.4.3" }
insta = { version = "1.39", features = ["json"] }
jsonschema = "0.26.1"
openapiv3 = "2.0.0"
prometheus = { version = "0.13.4", default-features = false }
proptest = { version = "1.5", default-features = false, features = ["alloc"] }
proptest-derive = "0.5.0"
rand = "0.8"
rand_chacha = "0.3.1"
rayon = "1.10.0"
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.208", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_arrays = "0.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_yaml = { version = "0.9", default-features = false }
serde_with = { version = "3.9", features = ["schemars_0_8"] }
sha2 = { version = "0.10.8", default-features = false }
strum = { version = "0.26.3", features = ["derive"] }
sp1-lib = { version = "3.0.0" }
sp1-sdk = { version = "3.0.0", default-features = false }
sp1-zkvm = { version = "3.0.0" }
thiserror = "1.0.64"
tower = { version = "0.4", default-features = false }
tower-http = "0.5"
tower-request-id = "0.3"
tracing-test = { version = "0.2.5", features = [
    "no-env-filter",
] } # https://docs.rs/tracing-test/latest/tracing_test/#per-crate-filtering
utoipa = "4.2"
# Based on top of 7.1, but have fix for infinite redirect. Should be good to switch back to crates version, when 7.2 is released.
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", rev = "a985d8c1340f80ab69b2b0e5de799df98d567732", features = [
    "axum",
] }
unwrap-infallible = "0.1.5"
tiny-keccak = "2.0.2"
tracing = { version = "0.1.40", default-features = false }
bech32 = { version = "0.11" }
derive_more = { version = "1.0", default-features = false, features = ["std"] }
clap = { version = "4.5.16", features = ["derive"] }
toml = { version = "0.8.19", features = ["parse"] }
jsonrpsee = { version = "0.24" }
schemars = { version = "0.8.21", features = ["derive"] }
tempfile = "3.12"
tokio = { version = "1.40", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1.10", default-features = false } # v1.9 is important because it guarantees monotic UUIDv7 generation: https://github.com/uuid-rs/uuid/releases/tag/1.9.0.
lazy_static = "1.5.0"
num_cpus = "1.16"
risc0-zkvm = { version = "1.1", default-features = false }
risc0-zkvm-platform = "1.1"
risc0-zkp = "1.1"
risc0-circuit-rv32im = "1.1"
risc0-build = "1.1"
sov-cycle-utils = { git = "https://github.com/Sovereign-Labs/risc0-cycle-macros.git", rev = "99cfee6d5fdf179062aa983a20f427c59e34cba3" }

# EVM dependencies
ethereum-types = "0.14.1"
ethers-core = { version = "=2.0.14", default-features = false }
ethers-contract = { version = "=2.0.14", default-features = false }
ethers-providers = { version = "=2.0.14", default-features = false }
ethers-signers = { version = "=2.0.14", default-features = false }
ethers-middleware = { version = "=2.0.14", default-features = false }
# ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9, just couple days after 1.0.4
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
alloy-rpc-types = { version = "0.2", default-features = false }
revm = { version = "12.1.0", features = ["serde"], default-features = false }
revm-inspectors = { version = "0.5", default-features = false }
secp256k1 = { version = "0.29.0", default-features = false, features = [
    "global-context",
    "recovery",
] }

# End of EVM dependencies
[patch.'https://github.com/eigerco/celestia-node-rs.git']

# Uncomment to apply local changes
# celestia-proto = { path = "../celestia-node-rs/proto" }
# celestia-rpc = { path = "../celestia-node-rs/rpc" }
# celestia-types = { path = "../celestia-node-rs/types" }
[patch.'https://github.com/eigerco/celestia-tendermint-rs.git']
# Uncomment to apply local changes
# tendermint = { path = "../celestia-tendermint-rs/tendermint" }
# tendermint-proto = { path = "../celestia-tendermint-rs/proto" }

[profile.rust-analyzer-optimized]
inherits = "dev"
debug = false
strip = true
codegen-units = 256

[profile.dev.package.sov-modules-macros]
# Set the optimization level to 3 for the sov-modules-macros crate. This
# should reduce build times for other packages.
opt-level = 1

[profile.release-with-opt-level-0]
inherits = "release"
opt-level = 0

[patch.crates-io]
# Fixes an issue where watch::Receiver::changed would never yield. This caused breakages in 
# tests, but could also silently lead to blocking the runtime yielding abysmal performance.
# https://github.com/tokio-rs/tokio/issues/6839.
# This fix should be released in 1.41
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "21df16d7595880247642c4fb38f1c365a49de75b" }
